// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SavedSearchForm render the SavedSearchForm should render create new 1`] = `
<SavedSearchForm
  disableCreateNew={false}
  isCreateNew={true}
  onChangeTitle={[Function]}
  saveAsSearch={[Function]}
  saveSearch={[Function]}
  target={[Function]}
  toggleModal={[Function]}
  value="new Title"
>
  <MockPortal>
    <mock-portal>
      <MockPosition
        container={<body />}
        placement="left"
        target={[Function]}
      >
        <mock-position
          container={<body />}
          placement="left"
          target={[Function]}
        >
          <Popover
            id="saved-search-popover"
            title="Name of search"
          >
            <GraylogThemeProvider>
              <ThemeProvider
                theme={
                  Object {
                    "color": Object {
                      "brand": Object {
                        "primary": "#FF3633",
                        "secondary": "#FFF",
                        "tertiary": "#1F1F1F",
                      },
                      "global": Object {
                        "background": "#e8e8e8",
                        "contentBackground": "#fff",
                        "link": "#702785",
                        "linkHover": "#4f1b5e",
                        "textAlt": "#fff",
                        "textDefault": "#1f1f1f",
                      },
                      "gray": Object {
                        "0": "#1f1f1f",
                        "10": "#353535",
                        "100": "#fff",
                        "20": "#4b4b4b",
                        "30": "#626262",
                        "40": "#787878",
                        "50": "#8f8f8f",
                        "60": "#a5a5a5",
                        "70": "#bbb",
                        "80": "#d2d2d2",
                        "90": "#e8e8e8",
                      },
                      "variant": Object {
                        "danger": "#AD0707",
                        "dark": Object {
                          "danger": "#5a0404",
                          "default": "#000",
                          "info": "#003667",
                          "primary": "#381342",
                          "success": "#005721",
                          "warning": "#a88b00",
                        },
                        "default": "#1F1F1F",
                        "info": "#0063BE",
                        "light": Object {
                          "danger": "#f96464",
                          "default": "#737373",
                          "info": "#67b6ff",
                          "primary": "#c47cd9",
                          "success": "#57ff97",
                          "warning": "#fff0a8",
                        },
                        "primary": "#702785",
                        "success": "#00AE42",
                        "warning": "#FFD200",
                      },
                    },
                    "mode": "teinte",
                  }
                }
              >
                <Popover__StyledPopover
                  id="saved-search-popover"
                  title="Name of search"
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Popover__StyledPopover-wd1j0g-0",
                          "isStatic": false,
                          "lastClassName": "dxgHck",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "Popover__StyledPopover",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Popover__StyledPopover-wd1j0g-0",
                        "target": [Function],
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    id="saved-search-popover"
                    title="Name of search"
                  >
                    <Popover
                      bsClass="popover"
                      className="Popover__StyledPopover-wd1j0g-0 dxgHck"
                      id="saved-search-popover"
                      placement="right"
                      title="Name of search"
                    >
                      <div
                        className="Popover__StyledPopover-wd1j0g-0 dxgHck popover right"
                        id="saved-search-popover"
                        role="tooltip"
                        style={
                          Object {
                            "display": "block",
                            "left": undefined,
                            "top": undefined,
                          }
                        }
                      >
                        <div
                          className="arrow"
                          style={
                            Object {
                              "left": undefined,
                              "top": undefined,
                            }
                          }
                        />
                        <h3
                          className="popover-title"
                        >
                          Name of search
                        </h3>
                        <div
                          className="popover-content"
                        >
                          <form>
                            <Component
                              validationState={null}
                            >
                              <FormGroup__StyledFormGroup
                                validationState={null}
                              >
                                <StyledComponent
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "SIZES": Array [
                                        "large",
                                        "small",
                                      ],
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "FormGroup__StyledFormGroup-sc-1wv4cm9-0",
                                        "isStatic": false,
                                        "lastClassName": "ekazNr",
                                        "rules": Array [
                                          [Function],
                                          ";",
                                        ],
                                      },
                                      "displayName": "FormGroup__StyledFormGroup",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "FormGroup__StyledFormGroup-sc-1wv4cm9-0",
                                      "target": [Function],
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  validationState={null}
                                >
                                  <FormGroup
                                    bsClass="form-group"
                                    className="FormGroup__StyledFormGroup-sc-1wv4cm9-0 ekazNr"
                                    validationState={null}
                                  >
                                    <div
                                      className="FormGroup__StyledFormGroup-sc-1wv4cm9-0 ekazNr form-group"
                                    >
                                      <ControlLabel>
                                        <StyledComponent
                                          forwardedComponent={
                                            Object {
                                              "$$typeof": Symbol(react.forward_ref),
                                              "attrs": Array [],
                                              "componentStyle": ComponentStyle {
                                                "componentId": "ControlLabel-sc-1edmum5-0",
                                                "isStatic": false,
                                                "lastClassName": "hCskeX",
                                                "rules": Array [
                                                  [Function],
                                                ],
                                              },
                                              "displayName": "ControlLabel",
                                              "foldedComponentIds": Array [],
                                              "render": [Function],
                                              "styledComponentId": "ControlLabel-sc-1edmum5-0",
                                              "target": [Function],
                                              "toString": [Function],
                                              "warnTooManyClasses": [Function],
                                              "withComponent": [Function],
                                            }
                                          }
                                          forwardedRef={null}
                                        >
                                          <ControlLabel
                                            bsClass="control-label"
                                            className="ControlLabel-sc-1edmum5-0 hCskeX"
                                            srOnly={false}
                                          >
                                            <label
                                              className="ControlLabel-sc-1edmum5-0 hCskeX control-label"
                                            >
                                              Title
                                            </label>
                                          </ControlLabel>
                                        </StyledComponent>
                                      </ControlLabel>
                                      <FormControl
                                        onChange={[Function]}
                                        placeholder="Enter title"
                                        type="text"
                                        value="new Title"
                                      >
                                        <StyledComponent
                                          forwardedComponent={
                                            Object {
                                              "$$typeof": Symbol(react.forward_ref),
                                              "Feedback": [Function],
                                              "SIZES": Array [
                                                "small",
                                                "large",
                                              ],
                                              "Static": [Function],
                                              "attrs": Array [],
                                              "componentStyle": ComponentStyle {
                                                "componentId": "FormControl-sc-1amoaox-0",
                                                "isStatic": false,
                                                "lastClassName": "gvyprk",
                                                "rules": Array [
                                                  [Function],
                                                ],
                                              },
                                              "displayName": "FormControl",
                                              "foldedComponentIds": Array [],
                                              "render": [Function],
                                              "styledComponentId": "FormControl-sc-1amoaox-0",
                                              "target": [Function],
                                              "toString": [Function],
                                              "warnTooManyClasses": [Function],
                                              "withComponent": [Function],
                                            }
                                          }
                                          forwardedRef={null}
                                          onChange={[Function]}
                                          placeholder="Enter title"
                                          type="text"
                                          value="new Title"
                                        >
                                          <FormControl
                                            bsClass="form-control"
                                            className="FormControl-sc-1amoaox-0 gvyprk"
                                            componentClass="input"
                                            onChange={[Function]}
                                            placeholder="Enter title"
                                            type="text"
                                            value="new Title"
                                          >
                                            <input
                                              className="FormControl-sc-1amoaox-0 gvyprk form-control"
                                              onChange={[Function]}
                                              placeholder="Enter title"
                                              type="text"
                                              value="new Title"
                                            />
                                          </FormControl>
                                        </StyledComponent>
                                      </FormControl>
                                    </div>
                                  </FormGroup>
                                </StyledComponent>
                              </FormGroup__StyledFormGroup>
                            </Component>
                            <ForwardRef
                              bsStyle="info"
                              className="button"
                              disabled={false}
                              onClick={[Function]}
                              type="submit"
                            >
                              <Button__StyledButton
                                bsStyle="info"
                                className="button"
                                disabled={false}
                                onClick={[Function]}
                                type="submit"
                              >
                                <StyledComponent
                                  bsStyle="info"
                                  className="button"
                                  disabled={false}
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "SIZES": Array [
                                        "large",
                                        "small",
                                        "xsmall",
                                      ],
                                      "STYLES": Array [
                                        "success",
                                        "warning",
                                        "danger",
                                        "info",
                                        "default",
                                        "primary",
                                        "link",
                                      ],
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "Button__StyledButton-c9cbmb-0",
                                        "isStatic": false,
                                        "lastClassName": "kojzoH",
                                        "rules": Array [
                                          [Function],
                                        ],
                                      },
                                      "displayName": "Button__StyledButton",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "Button__StyledButton-c9cbmb-0",
                                      "target": [Function],
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  onClick={[Function]}
                                  type="submit"
                                >
                                  <Button
                                    active={false}
                                    block={false}
                                    bsClass="btn"
                                    bsStyle="info"
                                    className="button Button__StyledButton-c9cbmb-0 cAlWKw"
                                    disabled={false}
                                    onClick={[Function]}
                                    type="submit"
                                  >
                                    <button
                                      className="button Button__StyledButton-c9cbmb-0 cAlWKw btn btn-info"
                                      disabled={false}
                                      onClick={[Function]}
                                      type="submit"
                                    >
                                      Create new
                                    </button>
                                  </Button>
                                </StyledComponent>
                              </Button__StyledButton>
                            </ForwardRef>
                            <ForwardRef
                              bsStyle="default"
                              className="button"
                              onClick={[Function]}
                            >
                              <Button__StyledButton
                                bsStyle="default"
                                className="button"
                                onClick={[Function]}
                              >
                                <StyledComponent
                                  bsStyle="default"
                                  className="button"
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "SIZES": Array [
                                        "large",
                                        "small",
                                        "xsmall",
                                      ],
                                      "STYLES": Array [
                                        "success",
                                        "warning",
                                        "danger",
                                        "info",
                                        "default",
                                        "primary",
                                        "link",
                                      ],
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "Button__StyledButton-c9cbmb-0",
                                        "isStatic": false,
                                        "lastClassName": "kojzoH",
                                        "rules": Array [
                                          [Function],
                                        ],
                                      },
                                      "displayName": "Button__StyledButton",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "Button__StyledButton-c9cbmb-0",
                                      "target": [Function],
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  onClick={[Function]}
                                >
                                  <Button
                                    active={false}
                                    block={false}
                                    bsClass="btn"
                                    bsStyle="default"
                                    className="button Button__StyledButton-c9cbmb-0 kojzoH"
                                    disabled={false}
                                    onClick={[Function]}
                                  >
                                    <button
                                      className="button Button__StyledButton-c9cbmb-0 kojzoH btn btn-default"
                                      disabled={false}
                                      onClick={[Function]}
                                      type="button"
                                    >
                                      Cancel
                                    </button>
                                  </Button>
                                </StyledComponent>
                              </Button__StyledButton>
                            </ForwardRef>
                          </form>
                        </div>
                      </div>
                    </Popover>
                  </StyledComponent>
                </Popover__StyledPopover>
              </ThemeProvider>
            </GraylogThemeProvider>
          </Popover>
        </mock-position>
      </MockPosition>
    </mock-portal>
  </MockPortal>
</SavedSearchForm>
`;

exports[`SavedSearchForm render the SavedSearchForm should render disabled create new 1`] = `
<SavedSearchForm
  disableCreateNew={true}
  isCreateNew={false}
  onChangeTitle={[Function]}
  saveAsSearch={[Function]}
  saveSearch={[Function]}
  target={[Function]}
  toggleModal={[Function]}
  value="new Title"
>
  <MockPortal>
    <mock-portal>
      <MockPosition
        container={<body />}
        placement="left"
        target={[Function]}
      >
        <mock-position
          container={<body />}
          placement="left"
          target={[Function]}
        >
          <Popover
            id="saved-search-popover"
            title="Name of search"
          >
            <GraylogThemeProvider>
              <ThemeProvider
                theme={
                  Object {
                    "color": Object {
                      "brand": Object {
                        "primary": "#FF3633",
                        "secondary": "#FFF",
                        "tertiary": "#1F1F1F",
                      },
                      "global": Object {
                        "background": "#e8e8e8",
                        "contentBackground": "#fff",
                        "link": "#702785",
                        "linkHover": "#4f1b5e",
                        "textAlt": "#fff",
                        "textDefault": "#1f1f1f",
                      },
                      "gray": Object {
                        "0": "#1f1f1f",
                        "10": "#353535",
                        "100": "#fff",
                        "20": "#4b4b4b",
                        "30": "#626262",
                        "40": "#787878",
                        "50": "#8f8f8f",
                        "60": "#a5a5a5",
                        "70": "#bbb",
                        "80": "#d2d2d2",
                        "90": "#e8e8e8",
                      },
                      "variant": Object {
                        "danger": "#AD0707",
                        "dark": Object {
                          "danger": "#5a0404",
                          "default": "#000",
                          "info": "#003667",
                          "primary": "#381342",
                          "success": "#005721",
                          "warning": "#a88b00",
                        },
                        "default": "#1F1F1F",
                        "info": "#0063BE",
                        "light": Object {
                          "danger": "#f96464",
                          "default": "#737373",
                          "info": "#67b6ff",
                          "primary": "#c47cd9",
                          "success": "#57ff97",
                          "warning": "#fff0a8",
                        },
                        "primary": "#702785",
                        "success": "#00AE42",
                        "warning": "#FFD200",
                      },
                    },
                    "mode": "teinte",
                  }
                }
              >
                <Popover__StyledPopover
                  id="saved-search-popover"
                  title="Name of search"
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Popover__StyledPopover-wd1j0g-0",
                          "isStatic": false,
                          "lastClassName": "dxgHck",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "Popover__StyledPopover",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Popover__StyledPopover-wd1j0g-0",
                        "target": [Function],
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    id="saved-search-popover"
                    title="Name of search"
                  >
                    <Popover
                      bsClass="popover"
                      className="Popover__StyledPopover-wd1j0g-0 dxgHck"
                      id="saved-search-popover"
                      placement="right"
                      title="Name of search"
                    >
                      <div
                        className="Popover__StyledPopover-wd1j0g-0 dxgHck popover right"
                        id="saved-search-popover"
                        role="tooltip"
                        style={
                          Object {
                            "display": "block",
                            "left": undefined,
                            "top": undefined,
                          }
                        }
                      >
                        <div
                          className="arrow"
                          style={
                            Object {
                              "left": undefined,
                              "top": undefined,
                            }
                          }
                        />
                        <h3
                          className="popover-title"
                        >
                          Name of search
                        </h3>
                        <div
                          className="popover-content"
                        >
                          <form>
                            <Component
                              validationState={null}
                            >
                              <FormGroup__StyledFormGroup
                                validationState={null}
                              >
                                <StyledComponent
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "SIZES": Array [
                                        "large",
                                        "small",
                                      ],
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "FormGroup__StyledFormGroup-sc-1wv4cm9-0",
                                        "isStatic": false,
                                        "lastClassName": "ekazNr",
                                        "rules": Array [
                                          [Function],
                                          ";",
                                        ],
                                      },
                                      "displayName": "FormGroup__StyledFormGroup",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "FormGroup__StyledFormGroup-sc-1wv4cm9-0",
                                      "target": [Function],
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  validationState={null}
                                >
                                  <FormGroup
                                    bsClass="form-group"
                                    className="FormGroup__StyledFormGroup-sc-1wv4cm9-0 ekazNr"
                                    validationState={null}
                                  >
                                    <div
                                      className="FormGroup__StyledFormGroup-sc-1wv4cm9-0 ekazNr form-group"
                                    >
                                      <ControlLabel>
                                        <StyledComponent
                                          forwardedComponent={
                                            Object {
                                              "$$typeof": Symbol(react.forward_ref),
                                              "attrs": Array [],
                                              "componentStyle": ComponentStyle {
                                                "componentId": "ControlLabel-sc-1edmum5-0",
                                                "isStatic": false,
                                                "lastClassName": "hCskeX",
                                                "rules": Array [
                                                  [Function],
                                                ],
                                              },
                                              "displayName": "ControlLabel",
                                              "foldedComponentIds": Array [],
                                              "render": [Function],
                                              "styledComponentId": "ControlLabel-sc-1edmum5-0",
                                              "target": [Function],
                                              "toString": [Function],
                                              "warnTooManyClasses": [Function],
                                              "withComponent": [Function],
                                            }
                                          }
                                          forwardedRef={null}
                                        >
                                          <ControlLabel
                                            bsClass="control-label"
                                            className="ControlLabel-sc-1edmum5-0 hCskeX"
                                            srOnly={false}
                                          >
                                            <label
                                              className="ControlLabel-sc-1edmum5-0 hCskeX control-label"
                                            >
                                              Title
                                            </label>
                                          </ControlLabel>
                                        </StyledComponent>
                                      </ControlLabel>
                                      <FormControl
                                        onChange={[Function]}
                                        placeholder="Enter title"
                                        type="text"
                                        value="new Title"
                                      >
                                        <StyledComponent
                                          forwardedComponent={
                                            Object {
                                              "$$typeof": Symbol(react.forward_ref),
                                              "Feedback": [Function],
                                              "SIZES": Array [
                                                "small",
                                                "large",
                                              ],
                                              "Static": [Function],
                                              "attrs": Array [],
                                              "componentStyle": ComponentStyle {
                                                "componentId": "FormControl-sc-1amoaox-0",
                                                "isStatic": false,
                                                "lastClassName": "gvyprk",
                                                "rules": Array [
                                                  [Function],
                                                ],
                                              },
                                              "displayName": "FormControl",
                                              "foldedComponentIds": Array [],
                                              "render": [Function],
                                              "styledComponentId": "FormControl-sc-1amoaox-0",
                                              "target": [Function],
                                              "toString": [Function],
                                              "warnTooManyClasses": [Function],
                                              "withComponent": [Function],
                                            }
                                          }
                                          forwardedRef={null}
                                          onChange={[Function]}
                                          placeholder="Enter title"
                                          type="text"
                                          value="new Title"
                                        >
                                          <FormControl
                                            bsClass="form-control"
                                            className="FormControl-sc-1amoaox-0 gvyprk"
                                            componentClass="input"
                                            onChange={[Function]}
                                            placeholder="Enter title"
                                            type="text"
                                            value="new Title"
                                          >
                                            <input
                                              className="FormControl-sc-1amoaox-0 gvyprk form-control"
                                              onChange={[Function]}
                                              placeholder="Enter title"
                                              type="text"
                                              value="new Title"
                                            />
                                          </FormControl>
                                        </StyledComponent>
                                      </FormControl>
                                    </div>
                                  </FormGroup>
                                </StyledComponent>
                              </FormGroup__StyledFormGroup>
                            </Component>
                            <ForwardRef
                              bsStyle="primary"
                              className="button"
                              onClick={[Function]}
                              type="submit"
                            >
                              <Button__StyledButton
                                bsStyle="primary"
                                className="button"
                                onClick={[Function]}
                                type="submit"
                              >
                                <StyledComponent
                                  bsStyle="primary"
                                  className="button"
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "SIZES": Array [
                                        "large",
                                        "small",
                                        "xsmall",
                                      ],
                                      "STYLES": Array [
                                        "success",
                                        "warning",
                                        "danger",
                                        "info",
                                        "default",
                                        "primary",
                                        "link",
                                      ],
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "Button__StyledButton-c9cbmb-0",
                                        "isStatic": false,
                                        "lastClassName": "kojzoH",
                                        "rules": Array [
                                          [Function],
                                        ],
                                      },
                                      "displayName": "Button__StyledButton",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "Button__StyledButton-c9cbmb-0",
                                      "target": [Function],
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  onClick={[Function]}
                                  type="submit"
                                >
                                  <Button
                                    active={false}
                                    block={false}
                                    bsClass="btn"
                                    bsStyle="primary"
                                    className="button Button__StyledButton-c9cbmb-0 dYxYaY"
                                    disabled={false}
                                    onClick={[Function]}
                                    type="submit"
                                  >
                                    <button
                                      className="button Button__StyledButton-c9cbmb-0 dYxYaY btn btn-primary"
                                      disabled={false}
                                      onClick={[Function]}
                                      type="submit"
                                    >
                                      Save
                                    </button>
                                  </Button>
                                </StyledComponent>
                              </Button__StyledButton>
                            </ForwardRef>
                            <ForwardRef
                              bsStyle="info"
                              className="button"
                              disabled={true}
                              onClick={[Function]}
                              type="submit"
                            >
                              <Button__StyledButton
                                bsStyle="info"
                                className="button"
                                disabled={true}
                                onClick={[Function]}
                                type="submit"
                              >
                                <StyledComponent
                                  bsStyle="info"
                                  className="button"
                                  disabled={true}
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "SIZES": Array [
                                        "large",
                                        "small",
                                        "xsmall",
                                      ],
                                      "STYLES": Array [
                                        "success",
                                        "warning",
                                        "danger",
                                        "info",
                                        "default",
                                        "primary",
                                        "link",
                                      ],
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "Button__StyledButton-c9cbmb-0",
                                        "isStatic": false,
                                        "lastClassName": "kojzoH",
                                        "rules": Array [
                                          [Function],
                                        ],
                                      },
                                      "displayName": "Button__StyledButton",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "Button__StyledButton-c9cbmb-0",
                                      "target": [Function],
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  onClick={[Function]}
                                  type="submit"
                                >
                                  <Button
                                    active={false}
                                    block={false}
                                    bsClass="btn"
                                    bsStyle="info"
                                    className="button Button__StyledButton-c9cbmb-0 cAlWKw"
                                    disabled={true}
                                    onClick={[Function]}
                                    type="submit"
                                  >
                                    <button
                                      className="button Button__StyledButton-c9cbmb-0 cAlWKw btn btn-info"
                                      disabled={true}
                                      onClick={[Function]}
                                      type="submit"
                                    >
                                      Save as
                                    </button>
                                  </Button>
                                </StyledComponent>
                              </Button__StyledButton>
                            </ForwardRef>
                            <ForwardRef
                              bsStyle="default"
                              className="button"
                              onClick={[Function]}
                            >
                              <Button__StyledButton
                                bsStyle="default"
                                className="button"
                                onClick={[Function]}
                              >
                                <StyledComponent
                                  bsStyle="default"
                                  className="button"
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "SIZES": Array [
                                        "large",
                                        "small",
                                        "xsmall",
                                      ],
                                      "STYLES": Array [
                                        "success",
                                        "warning",
                                        "danger",
                                        "info",
                                        "default",
                                        "primary",
                                        "link",
                                      ],
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "Button__StyledButton-c9cbmb-0",
                                        "isStatic": false,
                                        "lastClassName": "kojzoH",
                                        "rules": Array [
                                          [Function],
                                        ],
                                      },
                                      "displayName": "Button__StyledButton",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "Button__StyledButton-c9cbmb-0",
                                      "target": [Function],
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  onClick={[Function]}
                                >
                                  <Button
                                    active={false}
                                    block={false}
                                    bsClass="btn"
                                    bsStyle="default"
                                    className="button Button__StyledButton-c9cbmb-0 kojzoH"
                                    disabled={false}
                                    onClick={[Function]}
                                  >
                                    <button
                                      className="button Button__StyledButton-c9cbmb-0 kojzoH btn btn-default"
                                      disabled={false}
                                      onClick={[Function]}
                                      type="button"
                                    >
                                      Cancel
                                    </button>
                                  </Button>
                                </StyledComponent>
                              </Button__StyledButton>
                            </ForwardRef>
                          </form>
                        </div>
                      </div>
                    </Popover>
                  </StyledComponent>
                </Popover__StyledPopover>
              </ThemeProvider>
            </GraylogThemeProvider>
          </Popover>
        </mock-position>
      </MockPosition>
    </mock-portal>
  </MockPortal>
</SavedSearchForm>
`;

exports[`SavedSearchForm render the SavedSearchForm should render save 1`] = `
<SavedSearchForm
  disableCreateNew={false}
  isCreateNew={false}
  onChangeTitle={[Function]}
  saveAsSearch={[Function]}
  saveSearch={[Function]}
  target={[Function]}
  toggleModal={[Function]}
  value="new Title"
>
  <MockPortal>
    <mock-portal>
      <MockPosition
        container={<body />}
        placement="left"
        target={[Function]}
      >
        <mock-position
          container={<body />}
          placement="left"
          target={[Function]}
        >
          <Popover
            id="saved-search-popover"
            title="Name of search"
          >
            <GraylogThemeProvider>
              <ThemeProvider
                theme={
                  Object {
                    "color": Object {
                      "brand": Object {
                        "primary": "#FF3633",
                        "secondary": "#FFF",
                        "tertiary": "#1F1F1F",
                      },
                      "global": Object {
                        "background": "#e8e8e8",
                        "contentBackground": "#fff",
                        "link": "#702785",
                        "linkHover": "#4f1b5e",
                        "textAlt": "#fff",
                        "textDefault": "#1f1f1f",
                      },
                      "gray": Object {
                        "0": "#1f1f1f",
                        "10": "#353535",
                        "100": "#fff",
                        "20": "#4b4b4b",
                        "30": "#626262",
                        "40": "#787878",
                        "50": "#8f8f8f",
                        "60": "#a5a5a5",
                        "70": "#bbb",
                        "80": "#d2d2d2",
                        "90": "#e8e8e8",
                      },
                      "variant": Object {
                        "danger": "#AD0707",
                        "dark": Object {
                          "danger": "#5a0404",
                          "default": "#000",
                          "info": "#003667",
                          "primary": "#381342",
                          "success": "#005721",
                          "warning": "#a88b00",
                        },
                        "default": "#1F1F1F",
                        "info": "#0063BE",
                        "light": Object {
                          "danger": "#f96464",
                          "default": "#737373",
                          "info": "#67b6ff",
                          "primary": "#c47cd9",
                          "success": "#57ff97",
                          "warning": "#fff0a8",
                        },
                        "primary": "#702785",
                        "success": "#00AE42",
                        "warning": "#FFD200",
                      },
                    },
                    "mode": "teinte",
                  }
                }
              >
                <Popover__StyledPopover
                  id="saved-search-popover"
                  title="Name of search"
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Popover__StyledPopover-wd1j0g-0",
                          "isStatic": false,
                          "lastClassName": "dxgHck",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "Popover__StyledPopover",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Popover__StyledPopover-wd1j0g-0",
                        "target": [Function],
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    id="saved-search-popover"
                    title="Name of search"
                  >
                    <Popover
                      bsClass="popover"
                      className="Popover__StyledPopover-wd1j0g-0 dxgHck"
                      id="saved-search-popover"
                      placement="right"
                      title="Name of search"
                    >
                      <div
                        className="Popover__StyledPopover-wd1j0g-0 dxgHck popover right"
                        id="saved-search-popover"
                        role="tooltip"
                        style={
                          Object {
                            "display": "block",
                            "left": undefined,
                            "top": undefined,
                          }
                        }
                      >
                        <div
                          className="arrow"
                          style={
                            Object {
                              "left": undefined,
                              "top": undefined,
                            }
                          }
                        />
                        <h3
                          className="popover-title"
                        >
                          Name of search
                        </h3>
                        <div
                          className="popover-content"
                        >
                          <form>
                            <Component
                              validationState={null}
                            >
                              <FormGroup__StyledFormGroup
                                validationState={null}
                              >
                                <StyledComponent
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "SIZES": Array [
                                        "large",
                                        "small",
                                      ],
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "FormGroup__StyledFormGroup-sc-1wv4cm9-0",
                                        "isStatic": false,
                                        "lastClassName": "ekazNr",
                                        "rules": Array [
                                          [Function],
                                          ";",
                                        ],
                                      },
                                      "displayName": "FormGroup__StyledFormGroup",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "FormGroup__StyledFormGroup-sc-1wv4cm9-0",
                                      "target": [Function],
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  validationState={null}
                                >
                                  <FormGroup
                                    bsClass="form-group"
                                    className="FormGroup__StyledFormGroup-sc-1wv4cm9-0 ekazNr"
                                    validationState={null}
                                  >
                                    <div
                                      className="FormGroup__StyledFormGroup-sc-1wv4cm9-0 ekazNr form-group"
                                    >
                                      <ControlLabel>
                                        <StyledComponent
                                          forwardedComponent={
                                            Object {
                                              "$$typeof": Symbol(react.forward_ref),
                                              "attrs": Array [],
                                              "componentStyle": ComponentStyle {
                                                "componentId": "ControlLabel-sc-1edmum5-0",
                                                "isStatic": false,
                                                "lastClassName": "hCskeX",
                                                "rules": Array [
                                                  [Function],
                                                ],
                                              },
                                              "displayName": "ControlLabel",
                                              "foldedComponentIds": Array [],
                                              "render": [Function],
                                              "styledComponentId": "ControlLabel-sc-1edmum5-0",
                                              "target": [Function],
                                              "toString": [Function],
                                              "warnTooManyClasses": [Function],
                                              "withComponent": [Function],
                                            }
                                          }
                                          forwardedRef={null}
                                        >
                                          <ControlLabel
                                            bsClass="control-label"
                                            className="ControlLabel-sc-1edmum5-0 hCskeX"
                                            srOnly={false}
                                          >
                                            <label
                                              className="ControlLabel-sc-1edmum5-0 hCskeX control-label"
                                            >
                                              Title
                                            </label>
                                          </ControlLabel>
                                        </StyledComponent>
                                      </ControlLabel>
                                      <FormControl
                                        onChange={[Function]}
                                        placeholder="Enter title"
                                        type="text"
                                        value="new Title"
                                      >
                                        <StyledComponent
                                          forwardedComponent={
                                            Object {
                                              "$$typeof": Symbol(react.forward_ref),
                                              "Feedback": [Function],
                                              "SIZES": Array [
                                                "small",
                                                "large",
                                              ],
                                              "Static": [Function],
                                              "attrs": Array [],
                                              "componentStyle": ComponentStyle {
                                                "componentId": "FormControl-sc-1amoaox-0",
                                                "isStatic": false,
                                                "lastClassName": "gvyprk",
                                                "rules": Array [
                                                  [Function],
                                                ],
                                              },
                                              "displayName": "FormControl",
                                              "foldedComponentIds": Array [],
                                              "render": [Function],
                                              "styledComponentId": "FormControl-sc-1amoaox-0",
                                              "target": [Function],
                                              "toString": [Function],
                                              "warnTooManyClasses": [Function],
                                              "withComponent": [Function],
                                            }
                                          }
                                          forwardedRef={null}
                                          onChange={[Function]}
                                          placeholder="Enter title"
                                          type="text"
                                          value="new Title"
                                        >
                                          <FormControl
                                            bsClass="form-control"
                                            className="FormControl-sc-1amoaox-0 gvyprk"
                                            componentClass="input"
                                            onChange={[Function]}
                                            placeholder="Enter title"
                                            type="text"
                                            value="new Title"
                                          >
                                            <input
                                              className="FormControl-sc-1amoaox-0 gvyprk form-control"
                                              onChange={[Function]}
                                              placeholder="Enter title"
                                              type="text"
                                              value="new Title"
                                            />
                                          </FormControl>
                                        </StyledComponent>
                                      </FormControl>
                                    </div>
                                  </FormGroup>
                                </StyledComponent>
                              </FormGroup__StyledFormGroup>
                            </Component>
                            <ForwardRef
                              bsStyle="primary"
                              className="button"
                              onClick={[Function]}
                              type="submit"
                            >
                              <Button__StyledButton
                                bsStyle="primary"
                                className="button"
                                onClick={[Function]}
                                type="submit"
                              >
                                <StyledComponent
                                  bsStyle="primary"
                                  className="button"
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "SIZES": Array [
                                        "large",
                                        "small",
                                        "xsmall",
                                      ],
                                      "STYLES": Array [
                                        "success",
                                        "warning",
                                        "danger",
                                        "info",
                                        "default",
                                        "primary",
                                        "link",
                                      ],
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "Button__StyledButton-c9cbmb-0",
                                        "isStatic": false,
                                        "lastClassName": "kojzoH",
                                        "rules": Array [
                                          [Function],
                                        ],
                                      },
                                      "displayName": "Button__StyledButton",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "Button__StyledButton-c9cbmb-0",
                                      "target": [Function],
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  onClick={[Function]}
                                  type="submit"
                                >
                                  <Button
                                    active={false}
                                    block={false}
                                    bsClass="btn"
                                    bsStyle="primary"
                                    className="button Button__StyledButton-c9cbmb-0 dYxYaY"
                                    disabled={false}
                                    onClick={[Function]}
                                    type="submit"
                                  >
                                    <button
                                      className="button Button__StyledButton-c9cbmb-0 dYxYaY btn btn-primary"
                                      disabled={false}
                                      onClick={[Function]}
                                      type="submit"
                                    >
                                      Save
                                    </button>
                                  </Button>
                                </StyledComponent>
                              </Button__StyledButton>
                            </ForwardRef>
                            <ForwardRef
                              bsStyle="info"
                              className="button"
                              disabled={false}
                              onClick={[Function]}
                              type="submit"
                            >
                              <Button__StyledButton
                                bsStyle="info"
                                className="button"
                                disabled={false}
                                onClick={[Function]}
                                type="submit"
                              >
                                <StyledComponent
                                  bsStyle="info"
                                  className="button"
                                  disabled={false}
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "SIZES": Array [
                                        "large",
                                        "small",
                                        "xsmall",
                                      ],
                                      "STYLES": Array [
                                        "success",
                                        "warning",
                                        "danger",
                                        "info",
                                        "default",
                                        "primary",
                                        "link",
                                      ],
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "Button__StyledButton-c9cbmb-0",
                                        "isStatic": false,
                                        "lastClassName": "kojzoH",
                                        "rules": Array [
                                          [Function],
                                        ],
                                      },
                                      "displayName": "Button__StyledButton",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "Button__StyledButton-c9cbmb-0",
                                      "target": [Function],
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  onClick={[Function]}
                                  type="submit"
                                >
                                  <Button
                                    active={false}
                                    block={false}
                                    bsClass="btn"
                                    bsStyle="info"
                                    className="button Button__StyledButton-c9cbmb-0 cAlWKw"
                                    disabled={false}
                                    onClick={[Function]}
                                    type="submit"
                                  >
                                    <button
                                      className="button Button__StyledButton-c9cbmb-0 cAlWKw btn btn-info"
                                      disabled={false}
                                      onClick={[Function]}
                                      type="submit"
                                    >
                                      Save as
                                    </button>
                                  </Button>
                                </StyledComponent>
                              </Button__StyledButton>
                            </ForwardRef>
                            <ForwardRef
                              bsStyle="default"
                              className="button"
                              onClick={[Function]}
                            >
                              <Button__StyledButton
                                bsStyle="default"
                                className="button"
                                onClick={[Function]}
                              >
                                <StyledComponent
                                  bsStyle="default"
                                  className="button"
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "SIZES": Array [
                                        "large",
                                        "small",
                                        "xsmall",
                                      ],
                                      "STYLES": Array [
                                        "success",
                                        "warning",
                                        "danger",
                                        "info",
                                        "default",
                                        "primary",
                                        "link",
                                      ],
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "Button__StyledButton-c9cbmb-0",
                                        "isStatic": false,
                                        "lastClassName": "kojzoH",
                                        "rules": Array [
                                          [Function],
                                        ],
                                      },
                                      "displayName": "Button__StyledButton",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "Button__StyledButton-c9cbmb-0",
                                      "target": [Function],
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  onClick={[Function]}
                                >
                                  <Button
                                    active={false}
                                    block={false}
                                    bsClass="btn"
                                    bsStyle="default"
                                    className="button Button__StyledButton-c9cbmb-0 kojzoH"
                                    disabled={false}
                                    onClick={[Function]}
                                  >
                                    <button
                                      className="button Button__StyledButton-c9cbmb-0 kojzoH btn btn-default"
                                      disabled={false}
                                      onClick={[Function]}
                                      type="button"
                                    >
                                      Cancel
                                    </button>
                                  </Button>
                                </StyledComponent>
                              </Button__StyledButton>
                            </ForwardRef>
                          </form>
                        </div>
                      </div>
                    </Popover>
                  </StyledComponent>
                </Popover__StyledPopover>
              </ThemeProvider>
            </GraylogThemeProvider>
          </Popover>
        </mock-position>
      </MockPosition>
    </mock-portal>
  </MockPortal>
</SavedSearchForm>
`;
